--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <h1>Beautiful website</h1>
-<p>Hello there, welcome to <b>our website</b>. Thank you for visiting. <i>Here is a picture</i>. This image is called </p>
+<p>Hello there, welcome to <b>our website</b>. Thank you for visiting. <i>Here is a picture</i>. This image is called "cow.png"</p>
 
 
 </html>
