--- a/index.html
+++ b/index.html
@@ -2,5 +2,16 @@
 <h1>Beautiful website</h1>
 <p>Hello there, welcome to <b>our website</b>. Thank you for visiting. <i>Here is a picture</i>. This image is called "cow.png"</p>
 
+<img src="cow.png"></img>
+
+<p>You can view the orignal image at <a href="https://www.britannica.com/animal/cow">at this link</a></p>
+
+<h2>Contact us</h2>
+
+<p>Hello. We're excited to hear from you. Please leave us a message with your contact details so we can get hold of you.</p>
+<form>
+    <li><label>Your Name and Surname</label></li>
+    <input type="text">
+</form>
 
 </html>
