--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
 <p>Hello. We're excited to hear from you. Please leave us a message with your contact details so we can get hold of you.</p>
 <form>
-    <li><label>Your Name and Surname</label></li>
-    <input type="text">
+    <li><label>Your Name and Surname</label><input type="text"></li>
+    <li><label>How old are you?</label><input type="number"></li>
+    <li><label>Please enter your email here</label><input type="email"></li>
+    <li><label>Do you have a message for us?</label><textarea></textarea></li>
 </form>
 
 </html>
