--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <p>Hello. We're excited to hear from you. Please leave us a message with your contact details so we can get hold of you.</p>
 <form>
-    <label>Your Name and Surname </label><input type="text">
-    <label>How old are you? </label><input type="number">
-    <label>Please enter your email here </label><input type="email">
-    <label>Do you have a message for us? </label><textarea></textarea>
+    <label>Your Name and Surname </label><input type="text"> <br>
+    <label>How old are you? </label><input type="number"> <br>
+    <label>Please enter your email here </label><input type="email"> <br>
+    <label>Do you have a message for us? </label> <br> <textarea></textarea> <br>
     <input type="submit" value="Submit Form">
 </form>
 
